--- a/static/index.html
+++ b/static/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Node on Azure</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="index.css">
+	<script src="map-mania.js"></script>
+	<title>Map Mania Lite</title>
 </head>
-<body>
-<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-<p>This repository serves as a template that can be used to create a Node.js and Express based website that can easily
-be hosted on Microsoft Azure.</p>
+<body onload="initApplication()">
+	<h1>Map Mania Lite</h1>
 
-Additional application functionality includes:<br />
-<a href="fetching-from-server.html">Accessing Node.js Server-Side Application Programming Interfaces (APIs)</a><br />
-<a href="fetching-remote-dog-breeds.html">Accessing Remote Application Programming Interfaces (APIs)</a>
+	<div id="myMapID">
+
+	</div>
+
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo-Tx26B6v7TF7nKgqVKtjG5M0m6O48mQ&callback=initMap"></script>
 </body>
 </html>
