--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="index.css">
-	<script src="map-mania.js"></script>
+	<script src="index.js"></script>
 	<title>Map Mania Lite</title>
 </head>
 <body onload="initApplication()">
-	<h1>Map Mania Lite</h1>
+	<h1>Matt's Map Mania</h1>
 
 	<div id="myMapID">
 
