--- a/static/index.html
+++ b/static/index.html
@@ -4,14 +4,12 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js"></script>
-	<title>Map Mania Lite</title>
+	<title>Map Mania</title>
 </head>
 <body onload="initApplication()">
 	<h1>Matt's Map Mania</h1>
 
-	<div id="myMapID">
-
-	</div>
+	<div id="myMapID"></div>
 
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo-Tx26B6v7TF7nKgqVKtjG5M0m6O48mQ&callback=initMap"></script>
 </body>
